changed explore page

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -310,22 +310,25 @@
 
 		<div class="main-container container-fluid">
 			
-			<div class="breadcrumbs center" id="breadcrumbs">
-				<a href="#" class="brand">
-					<small>
-						<img src="assets/images/logo.png" class="msg-photo" alt="ITClouder" style="width:100px"/>
-					</small>
-				</a><!--/.brand-->
+			<div class="searchbars" id="searchbar">
+				<div class="pull-left">
+					<a href="#" class="brand">
+						<small>
+							<img src="assets/images/logo.png" class="msg-photo" alt="ITClouder" style="width:100px"/>
+						</small>
+					</a><!--/.brand-->
 				
-
-				<div class="nav-search" id="nav-search">
+				</div>
+				
+				<div class="nav-search pull-left" id="nav-search">
 					<form class="form-search">
-						<span class="input-icon">
+						<span class="input-icon-big">
 							<input type="text" placeholder="Search ..." class="input-xxlarge nav-search-input" id="nav-search-input" autocomplete="off">
 							<i class="icon-search nav-search-icon"></i>
 						</span>
 					</form>
 				</div><!--#nav-search-->
+				
 			</div>
 			
 			<a class="menu-toggler" id="menu-toggler" href="#">
