--- a/public/stylesheets/less/ace.less
+++ b/public/stylesheets/less/ace.less
@@ -11,6 +11,7 @@
 @import "ace-nav.less";//ace top navigation
 
 @import "breadcrumbs.less";
+@import "searchbar.less";
 @import "searchbox.less";
 @import "sidebar.less";
 
@@ -24,6 +25,7 @@
 @import "widget.less";
 @import "tooltip-popover.less";
 @import "progressbar.less";
+@import "groupbox.less";
 @import "infobox.less";
 
 @import "page.pricing.less";
