--- a/public/stylesheets/less/variables.less
+++ b/public/stylesheets/less/variables.less
@@ -10,7 +10,7 @@
 
 
 //ace top nav/bar
-@navbar-mh:45px;//navbar's min-height
+@navbar-mh:30px;//navbar's min-height
 @navbar-bg:#438EB9;
 @navbar-text-color:#FFF;
 @brand-size:24px;//brand logo font size
@@ -39,6 +39,9 @@
 
 //breadcrumb
 @breadcrumb-height:40px;
+
+//search bar
+@searchbar-height:60px;
 
 
 
