--- a/app/views/widgets/community_hot.scala.html
+++ b/app/views/widgets/community_hot.scala.html
@@ -19,123 +19,105 @@
 			<div class="space-6"></div>
 
 			<div class="row-fluid">
-				<div class="">
+				<div class="span4">
+					<div class="groupbox groupbox-dark ">
+						<a href="#">
+							<img src="@routes.Assets.at("images/gallery/cloud.jpg")" style="width:60px; height:60px; top:0px; vertical-align:top;">
+						</a>
+
+						<div class="groupbox-data">
+							<div class="groupbox-content"><a href="#">测试群组 (私有)</a></div>
+							<div class="groupbox-content">11位成员</div>
+						</div>
+
+						<div class="badge badge-error">
+							100+
+						</div>
+					</div>
 				</div>
-				<ul class="ace-thumbnails">
-					<li>
-						<a href="assets/images/gallery/image-1.jpg" title="Photo Title" data-rel="colorbox" class="cboxElement">
-							<img alt="150x150" src="assets/images/gallery/tivoli.jpg" style="max-width:150px;">
-							<div class="tags">
-								<span class="label label-info">breakfast</span>
-								<span class="label label-important">fruits</span>
-								<span class="label label-success">toast</span>
-								<span class="label label-warning arrowed-in">diet</span>
-							</div>
+				<div class="span4">
+					<div class="groupbox groupbox-dark ">
+						<a href="#">
+							<img src="@routes.Assets.at("images/gallery/linux.jpg")" style="width:60px; height:60px; top:0px; vertical-align:top;">
 						</a>
 
-						<div class="tools">
-							<a href="#">
-								<i class="icon-link"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-paper-clip"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-pencil"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-remove red"></i>
-							</a>
+						<div class="groupbox-data">
+							<div class="groupbox-content"><a href="#">测试群组 (私有)</a></div>
+							<div class="groupbox-content">11位成员</div>
 						</div>
-					</li>
 
-					<li>
-						<a href="assets/images/gallery/image-1.jpg" title="Photo Title" data-rel="colorbox" class="cboxElement">
-							<img alt="150x150" src="assets/images/gallery/oracle.jpg" style="max-width:150px;"> 
-							<div class="tags">
-								<span class="label label-warning arrowed-in">diet</span>
-							</div>
+						<div class="badge badge-error">
+							100+
+						</div>
+					</div>
+				</div>
+				<div class="span4">
+					<div class="groupbox groupbox-dark ">
+						<a href="#">
+							<img src="@routes.Assets.at("images/gallery/oracle.jpg")" style="width:60px; height:60px; top:0px; vertical-align:top;">
 						</a>
 
-						<div class="tools">
-							<a href="#">
-								<i class="icon-link"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-paper-clip"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-pencil"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-remove red"></i>
-							</a>
+						<div class="groupbox-data">
+							<div class="groupbox-content"><a href="#">测试群组 (私有)</a></div>
+							<div class="groupbox-content">11位成员</div>
 						</div>
-					</li>
-					
-					<li>
-						<a href="assets/images/gallery/image-1.jpg" title="Photo Title" data-rel="colorbox" class="cboxElement">
-							<img alt="150x150" src="assets/images/gallery/linux.jpg" style="max-width:150px;">
-							<div class="tags">
-								<span class="label label-success">toast</span>
-								<span class="label label-warning arrowed-in">diet</span>
-							</div>
+
+						<div class="badge badge-error">
+							100+
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row-fluid">
+				<div class="span4">
+					<div class="groupbox groupbox-dark ">
+						<a href="#">
+							<img src="@routes.Assets.at("images/gallery/web.jpg")" style="width:60px; height:60px; top:0px; vertical-align:top;">
 						</a>
 
-						<div class="tools">
-							<a href="#">
-								<i class="icon-link"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-paper-clip"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-pencil"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-remove red"></i>
-							</a>
+						<div class="groupbox-data">
+							<div class="groupbox-content"><a href="#">测试群组 (私有)</a></div>
+							<div class="groupbox-content">11位成员</div>
 						</div>
-					</li>
-					
-					<li>
-						<a href="assets/images/gallery/image-1.jpg" title="Photo Title" data-rel="colorbox" class="cboxElement">
-							<img alt="150x150" src="assets/images/gallery/cloud.jpg" style="max-width:150px;">
-							<div class="tags">
-								<span class="label label-info">breakfast</span>
-								<span class="label label-warning arrowed-in">diet</span>
-							</div>
+
+						<div class="badge badge-error">
+							100+
+						</div>
+					</div>
+				</div>
+				<div class="span4">
+					<div class="groupbox groupbox-dark ">
+						<a href="#">
+							<img src="@routes.Assets.at("images/gallery/ubuntu.jpg")" style="width:60px; height:60px; top:0px; vertical-align:top;">
 						</a>
 
-						<div class="tools">
-							<a href="#">
-								<i class="icon-link"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-paper-clip"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-pencil"></i>
-							</a>
-
-							<a href="#">
-								<i class="icon-remove red"></i>
-							</a>
+						<div class="groupbox-data">
+							<div class="groupbox-content"><a href="#">测试群组 (私有)</a></div>
+							<div class="groupbox-content">11位成员</div>
 						</div>
-					</li>
-					
-				</ul>
+
+						<div class="badge badge-error">
+							100+
+						</div>
+					</div>
+				</div>
+				<div class="span4">
+					<div class="groupbox groupbox-dark ">
+						<a href="#">
+							<img src="@routes.Assets.at("images/gallery/nexus.jpg")" style="width:60px; height:60px; top:0px; vertical-align:top;">
+						</a>
+
+						<div class="groupbox-data">
+							<div class="groupbox-content"><a href="#">测试群组 (私有)</a></div>
+							<div class="groupbox-content">11位成员</div>
+						</div>
+
+						<div class="badge badge-error">
+							100+
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<!--PAGE CONTENT ENDS-->
