--- a/public/stylesheets/less/form.less
+++ b/public/stylesheets/less/form.less
@@ -245,7 +245,9 @@ input[readonly] {
  > [class*="icon-"] {
 	padding:0 3px;
 	z-index:2;
-	position:absolute; top:1px; bottom:1px;
+	position:absolute; 
+	top: 1px;
+	bottom: 1px;
 	left:3px;
 	line-height:28px;
  
@@ -275,7 +277,55 @@ input[readonly] {
  .control-group.info & > [class*="icon-"] { color:@info-state-color; }
 }
 
+.input-icon-big {
+ position:relative;
+ span& {
+	display:inline-block;
+ }
+ 
+ > input {
+	padding-left:24px;
+	padding-right:6px;
+ }
+ &.input-icon-right > input {
+	padding-left:6px;
+	padding-right:24px;
+ }
 
+ > [class*="icon-"] {
+	padding:0 3px;
+	z-index:2;
+	position:absolute; 
+	top: 6px;
+	bottom: 1px;
+	left:3px;
+	line-height:28px;
+ 
+	display:inline-block;
+	color:#909090;
+	font-size:16px;
+ }
+ 
+ &.input-icon-right > [class*="icon-"] {
+	left:auto;
+	right:3px;
+ }
+ 
+ > input:focus + [class*="icon-"] {
+	color:#579;
+ }
+
+ ~ .help-inline {
+	padding-left:8px;
+ }
+
+
+
+ .control-group.warning & > [class*="icon-"] { color:@warning-state-color; }
+ .control-group.success & > [class*="icon-"] { color:@success-state-color; }
+ .control-group.error & > [class*="icon-"] { color:@error-state-color; }
+ .control-group.info & > [class*="icon-"] { color:@info-state-color; }
+}
 
 
 /* checkboxes , radio and switches */
