--- a/app/views/Communities/index.scala.html
+++ b/app/views/Communities/index.scala.html
@@ -2,5 +2,18 @@
 @import widgets._
 
 @main("个人主页") {
-
+	<div class="span3">
+		
+		@myprofile()
+		
+		@hot_user()
+		
+	</div>
+	
+	<div class="span9">
+		@community_my()
+		
+		@stream()
+	</div>
+	
 }
