--- a/app/views/widgets/community_my.scala.html
+++ b/app/views/widgets/community_my.scala.html
@@ -1,7 +1,7 @@
 <div class="widget-box transparent">
 	<div class="widget-header widget-header-flat">
 		<h5>
-			<i class="icon-group blue"></i> 热门圈子
+			<i class="icon-group blue"></i> 我的圈子
 			<small>
 				<i class="icon-double-angle-right"></i>
 				社交运维 &amp; 知识共享
