--- a/app/views/widgets/navbar.scala.html
+++ b/app/views/widgets/navbar.scala.html
@@ -4,10 +4,10 @@
 			
 			<ul class="nav ace-nav" id="main-nav">
 				<li><a href="@{routes.Application.index}">浏览</a></li>
-				<li><a href="@{routes.Communities.index}">主页</a></li>
-				<li><a href="community.html">圈子</a></li>
-				<li><a href="blog.html">博客</a></li>
-				<li><a href="ask.html">问答</a></li>
+				<li><a href="@{routes.Home.index}">主页</a></li>
+				<li><a href="@{routes.Communities.index}">圈子</a></li>
+				<li><a href="@{routes.Blog.index}">博客</a></li>
+				<li><a href="@{routes.Ask.index}">问答</a></li>
 			</ul>
 			
 			<ul class="nav ace-nav pull-right">
@@ -224,8 +224,7 @@
 					<a data-toggle="dropdown" href="#" class="dropdown-toggle">
 						<img class="nav-user-photo" src="assets/avatars/user.jpg" alt="Jason's Photo" />
 						<span class="user-info">
-							<small>Welcome,</small>
-							Jason
+							胡敏
 						</span>
 
 						<i class="icon-caret-down"></i>
