--- a/app/views/Communities/index.scala.html
+++ b/app/views/Communities/index.scala.html
@@ -10,7 +10,7 @@
 				<a href="#" class="user-title-label dropdown-toggle" data-toggle="dropdown">
 					<i class="icon-group light-blue middle"></i>
 					&nbsp;
-					<span class="white middle bigger-120">创建圈子</span>
+					<span class="white middle bigger-120">创建圈子/团队</span>
 				</a>
 			</div>
 		</div>
